<resources>
    <string name="app_name">OpearloVR</string>
    <string name="edit_message">Your message here</string>
    <string name="button_start">Start</string>
    <string name="button_options">Options</string>
    <string name="button_quit">Quit</string>
    <string name="dialog_text">OPTIONS</string>
    <string name="soundSwitch_text">Sounds</string>
    <string name="notifSwitch_text">Notifications</string>
    <string name="speedBar_text">Select text speed:</string>
    <string name="signOut_text">Sign Out</string>

    <string name="sign_in">SIGN IN to play</string>

    <string name="investigation_time">Take part to a new investigation</string>
    <string name="investigation_text_content">Unravel new misteries</string>
    <string name="investigation_press">Get into the crime scene now!</string>

    <string name="preference_file_key">io.marco.opearlovr.PREFERENCE_FILE_KEY</string>
    <string name="saved_options">io.marco.opearlovr.SAVED_OPTIONS</string>

        <string name="title_activity_story_line">StoryLineActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
