<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:lines="4"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/dialog_text"
        android:textColor="@android:color/white"
        android:textSize="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="30px">


        <Switch
            android:text="@string/soundSwitch_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/soundSwitch"
            android:layout_marginBottom="20px" />

        <Switch
            android:text="@string/notifSwitch_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notifSwitch"
            android:layout_marginBottom="20px"
            android:switchPadding="10px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speedBar_text"
            android:id="@+id/speedBarText"
            android:layout_marginBottom="5px" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/speedBar"
            android:layout_marginBottom="20px" />

        <Button
            android:text="@string/signOut_text"
            android:layout_width="match_parent"
            android:id="@+id/signOutBtn"
            android:layout_height="wrap_content" />

    </LinearLayout>



</LinearLayout>